--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="scrollbar.css">
     </head>
     <body>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam bibendum faucibus lectus at finibus. Morbi laoreet erat erat, eu condimentum enim suscipit at. Cras a nisi eu augue vestibulum venenatis et at metus. Nam facilisis, turpis at commodo iaculis, sapien sem vehicula eros, sed volutpat ligula leo vitae libero. Proin nec velit sed metus porttitor sollicitudin. Vestibulum sed quam pellentesque, hendrerit nisl ac, ultrices lacus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent in imperdiet ex. Duis et dui faucibus, viverra augue sit amet, efficitur nibh. Morbi sit amet interdum felis, a ullamcorper libero.
